Do some settings
